# gwf-rs

./: Cargo.toml
assets/: README.md
benches/: pycbc.rs
examples/: massive.rs  pprof.rs  pycbc.rs
src/: decompress.rs  endian.rs  handler.rs  header.rs  lib.rs  parser.rs  strings.rs  structures.rs  v6.rs  v8.rs
tests/: integration_tests.rs
