[package]
name = "gwf"
version = "0.1.0"
authors = ["Chris Goller <goller@gmail.com>"]
edition = "2018"

[dependencies]
data_models = "0.2.0"
byteorder = "1.3.2"
flate2 = { version = "1.0.14", features = ["zlib-ng-compat"], default-features = false }
strum = "0.20.0"
strum_macros = "0.20.1"

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }

[lib]
bench = true

[[bench]]
name = "pycbc"
harness = false

[profile.release]
debug = true